redid training button margin to fix all mobile paragraph spacing on capabilities page

--- a/logical-solutions/styles/4-sections/capabilities.sass
+++ b/logical-solutions/styles/4-sections/capabilities.sass
@@ -137,9 +137,10 @@
       color: $mid-light-grey !important
       cursor: not-allowed
 
-  &--training
-    &--learn-more
-      margin-top: 3rem
+  &--mobile-paragraph-margin-bottom
+    @media screen and (max-width: 991px)
+      margin-bottom: 3rem
+
 
 .active
   .capabilities--option-text
